--- a/src/Client/Pages/Index.razor
+++ b/src/Client/Pages/Index.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hardware reservation scheduler</h1>
 
-Welcome to your new app.
+Welcome to hardware reservation scheduler.
