--- a/src/Client/Shared/NavMenu.razor
+++ b/src/Client/Shared/NavMenu.razor
@@ -15,8 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="platforms">
+                <span class="oi oi-laptop" aria-hidden="true"></span> Platforms
             </NavLink>
         </div>
         <div class="nav-item px-3">
